--- a/ui/src/app/cohort-search/tree/tree.component.html
+++ b/ui/src/app/cohort-search/tree/tree.component.html
@@ -6,22 +6,21 @@
   <clr-icon shape="error-standard"></clr-icon>
   <em>Failed to Load Criteria</em>
 </div>
-<clr-alert *ngIf="!children || !children.size" [clrAlertType]="'alert-warning'" [clrAlertClosable]="false">
+<clr-alert *ngIf="isEmpty" [clrAlertType]="'alert-warning'" [clrAlertClosable]="false">
   <div clr-alert-item class="alert-item">
     <span class="alert-text">
       No results found
     </span>
   </div>
 </clr-alert>
-<!--dropdown for conditions start-->
 <div class="dropdown-search-container">
-  <div [ngClass]="{'condition-dropdown' : showDropDown()}">
-    <ng-container *ngIf = "showDropDown() && !loading">
-    <crit-code-dropdown (onOptionChange)="optionChange($event)" [_type]="_type"></crit-code-dropdown>
+  <div [ngClass]="{'condition-dropdown' : showDropDown}">
+    <ng-container *ngIf="showDropDown">
+      <crit-code-dropdown (onOptionChange)="optionChange($event)" [_type]="_type"></crit-code-dropdown>
     </ng-container>
   </div>
-  <div [ngClass]="showDropDown()? 'search-container' :'search-width'">
-    <app-search-bar *ngIf="showSearch() && !loading" [_type]="_type"></app-search-bar>
+  <div [ngClass]="showDropDown ? 'search-container' : 'search-width'">
+    <app-search-bar *ngIf="showSearch" [_type]="_type"></app-search-bar>
   </div>
 </div>
 <div *ngIf="numMatches > 1">
