--- a/ui/src/app/cohort-search/tree/tree.component.html
+++ b/ui/src/app/cohort-search/tree/tree.component.html
@@ -1,31 +1,26 @@
 <div *ngIf="loading" class="spinner root-spinner">
   Loading...
 </div>
-<app-search-bar *ngIf="showSearch() && !loading" [_type]="_type"></app-search-bar>
-<div *ngIf="numMatches > 1">
-  <b>Note:</b> There are {{numMatches}} matches for your search
-</div>
 <!-- TODO: This error handling is a stub until we can get a designer to look at it -->
 <div *ngIf="error" class="error">
   <clr-icon shape="error-standard"></clr-icon>
   <em>Failed to Load Criteria</em>
 </div>
-<clr-alert *ngIf="!children || !children.size" [clrAlertType]="'alert-warning'" [clrAlertClosable]="false">
-    <div clr-alert-item class="alert-item">
+<clr-alert *ngIf="isEmpty" [clrAlertType]="'alert-warning'" [clrAlertClosable]="false">
+  <div clr-alert-item class="alert-item">
     <span class="alert-text">
       No results found
     </span>
-    </div>
+  </div>
 </clr-alert>
-<!--dropdown for conditions start-->
 <div class="dropdown-search-container">
-  <div [ngClass]="{'condition-dropdown' : showDropDown()}">
-    <ng-container *ngIf = "showDropDown() && !loading">
-    <crit-code-dropdown (onOptionChange)="optionChange($event)" [_type]="_type"></crit-code-dropdown>
+  <div [ngClass]="{'condition-dropdown' : showDropDown}">
+    <ng-container *ngIf="showDropDown">
+      <crit-code-dropdown (onOptionChange)="optionChange($event)" [_type]="_type"></crit-code-dropdown>
     </ng-container>
   </div>
-  <div [ngClass]="showDropDown()? 'search-container' :'search-width'">
-    <app-search-bar *ngIf="showSearch() && !loading" [_type]="_type"></app-search-bar>
+  <div [ngClass]="showDropDown ? 'search-container' : 'search-width'">
+    <app-search-bar *ngIf="showSearch" [_type]="_type"></app-search-bar>
   </div>
 </div>
 <div class="tree-container" [class.multiple]="multipleMatches">
