RW-1303 demographic remove finish button  from html

--- a/ui/src/app/cohort-search/demographics/demographics.component.html
+++ b/ui/src/app/cohort-search/demographics/demographics.component.html
@@ -33,7 +33,7 @@
   </p>
 </popper-content>
 
-<form class="form-container" [formGroup]="demoForm" (ngSubmit)="finish.emit(true)">
+<form class="form-container" [formGroup]="demoForm">
   <!-- Age -->
   <div class="age-label">
     Current Age
