RW-1303 fixed service call and total count

--- a/ui/src/app/cohort-search/demographics/demographics.component.css
+++ b/ui/src/app/cohort-search/demographics/demographics.component.css
@@ -197,6 +197,10 @@ label[for="deceased"] {
   pointer-events: none;
 }
 
+.white-background {
+  background-color: #FFFFFF;
+}
+
 .calculate-button {
   font-size: 14px;
   font-weight: 500;
