--- a/ui/src/app/styles/buttons.css
+++ b/ui/src/app/styles/buttons.css
@@ -74,3 +74,19 @@
 .btn:focus {
   outline: none;
 }
+
+.btn-dropdown:active {
+  box-shadow: inset 0 2px 0 0 #979797;
+}
+
+.btn-dropdown {
+  border: 1px solid #979797;
+  border-radius: 6px;
+  background-color: white;
+  font-size: 14px;
+  font-weight: 300;
+  color: #4A4A4A;
+  line-height: 24px;
+  height: 1.5rem;
+  text-transform: none;
+}
