--- a/ui/src/app/cohort-search/modal/modal.component.html
+++ b/ui/src/app/cohort-search/modal/modal.component.html
@@ -1,16 +1,17 @@
+
 <div class="crit-modal-container" [class.show]="open">
   <div class="crit-modal-content">
     <div class="container title-margin">
       <div class="row">
-        <div class="col col-sm-8 padding-zero" [ngClass]="{'col col-lg-12': ctype === treeType[treeType.DEMO]}">
+        <div class="col col-sm-8 padding-zero">
           <div class="title-bar">
             <div class="btn-group btn-link">
-              <ng-container *ngIf="(ctype !== treeType[treeType.DEMO])">
+              <ng-container>
                 <button  *ngIf="attributesNode.size === 0"
-                  type="button"
-                  class="btn tab"
-                  [class.active]="mode === 'tree'"
-                  (click)="mode = 'tree'">
+                 type="button"
+                 class="btn tab"
+                 [class.active]="mode === 'tree'"
+                 (click)="mode = 'tree'">
                   {{ title }}
                 </button>
                 <button *ngIf="attributesNode.size > 0"
@@ -19,13 +20,13 @@
                   {{attributeTitle}}
                 </button>
 
-                <div *ngIf="ctype !== treeType[treeType.PM]" class="vbar"></div>
+                <div *ngIf="ctype !== treeType[treeType.PM] && ctype !== treeType[treeType.DEMO]" class="vbar"></div>
                 <button type="button"
-                  class="btn tab"
-                  *ngIf="ctype !== treeType[treeType.PM]"
-                  [class.active]="mode === 'modifiers'"
-                  [disabled]="noSelection"
-                  (click)="mode = 'modifiers'">
+                        class="btn tab"
+                        *ngIf="ctype !== treeType[treeType.PM] && ctype !== treeType[treeType.DEMO]"
+                        [class.active]="mode === 'modifiers'"
+                        [disabled]="noSelection"
+                        (click)="mode = 'modifiers'">
                   Modifiers
                 </button>
               </ng-container>
@@ -37,16 +38,16 @@
               drugs by brand names outside of All of Us
             </div>
             <button *ngIf="attributesNode.size > 0"
-              (click)="back()"
-              class="btn btn-link btn-icon">
+                    (click)="back()"
+                    class="btn btn-link btn-icon">
               <clr-icon size="24" shape="close"></clr-icon>
             </button>
           </div>
           <div class="content" *ngIf="open">
             <ng-container [ngSwitch]="ctype">
               <crit-demographics *ngSwitchCase="treeType[treeType.DEMO]"
-                                 (cancel)="cancel()"
-                                 (finish)="finish()">
+                                 [selectedTypes]="demoItemsType"
+              [selectedParamId]="demoParam">
               </crit-demographics>
 
               <ng-container *ngSwitchDefault>
@@ -69,36 +70,37 @@
           </div>
         </div>
 
-        <div class="col col-sm-4 padding-zero" *ngIf="ctype !== treeType[treeType.DEMO]">
+        <div class="col col-sm-4 padding-zero">
           <div class="content" *ngIf="open">
             <ng-container [ngSwitch]="ctype">
               <ng-container *ngSwitchDefault>
                 <div class="panel-right-container">
                   <h5 class="selection-title">{{ selectionTitle }}</h5>
                   <div class="panel-right selected">
-                    <ng-container *ngFor="let type of objectKey(selections)">
-                      <h6 class="selection-header" *ngIf="showHeader">{{selectionHeader(type)}}</h6>
-                      <crit-selection-info
-                        *ngFor="let parameter of selections[type]; let i = index"
-                        [index]="i"
-                        [parameter]="parameter">
-                      </crit-selection-info>
-                    </ng-container>
+                      <ng-container *ngFor="let type of objectKey(selections)">
+                          <h6 class="selection-header" *ngIf="showHeader">{{selectionHeader(type)}}</h6>
+                          <crit-selection-info
+                                  *ngFor="let parameter of selections[type]; let i = index"
+                                  [index]="i"
+                                  [parameter]="parameter"
+                                  (demoItems) = "getDemoParams($event)">
+                          </crit-selection-info>
+                      </ng-container>
                   </div>
-                  <div *ngIf="ctype !== treeType[treeType.DEMO]" class="footer">
+                  <div class="footer">
                     <button type="button"
                             (click)="cancel()"
                             class="btn btn-link">
                       Cancel
                     </button>
-                    <button  *ngIf="ctype !== treeType[treeType.PM] && mode !== 'modifiers'"
-                            type="button"
-                            [disabled]="noSelection"
+                    <button  *ngIf="ctype !== treeType[treeType.PM] && ctype !== treeType[treeType.DEMO] && mode !== 'modifiers'"
+                             type="button"
+                             [disabled]="noSelection"
                              (click)="mode = 'modifiers'"
-                            class="btn btn-primary">
+                             class="btn btn-primary">
                       Next
                     </button>
-                    <button  *ngIf="ctype !== treeType[treeType.PM] && mode === 'modifiers'"
+                    <button  *ngIf="ctype !== treeType[treeType.PM] && ctype !== treeType[treeType.DEMO] && mode === 'modifiers'"
                              type="button"
                              (click)="mode = 'tree'"
                              class="btn btn-primary">
@@ -120,3 +122,4 @@
     </div>
   </div>
 </div>
+
