--- a/ui/src/app/cohort-search/demographics/demographics.component.html
+++ b/ui/src/app/cohort-search/demographics/demographics.component.html
@@ -32,123 +32,132 @@
   </p>
 </popper-content>
 
-<form [formGroup]="demoForm" (ngSubmit)="finish.emit(true)">
+<form class="form-container" [formGroup]="demoForm">
   <!-- Age -->
-  <div class="form-row">
-    <div class="form-label">
-      Age
-    </div>
-    <div class="control-wrapper slider-wrapper">
-      <input type="number"
-        id="min-age"
-        [min]="minAge" [max]="maxAge"
-        formControlName="ageMin"
-        class="number-display"
-        (blur)="checkMin()">
-      <div class="slider">
-        <div id="count-wrapper">
+  <div class="age-label">
+    Current Age
+  </div>
+  <div class="control-wrapper slider-wrapper" [ngClass]="[deceasedClicked? 'deceaseNoCursor':'deceaseCursor']">
+    <input type="number"
+           id="min-age"
+           [min]="minAge" [max]="maxAge"
+           formControlName="ageMin"
+           class="number-display"
+           (blur)="checkMin()">
+    <div class="slider">
+      <div id="count-wrapper">
           <span id="age-count" class="badge badge-info">
             {{ ageCount | number }}
           </span>
-        </div>
-        <nouislider
-          [min]="minAge" [max]="maxAge" [step]="1"
-          [behaviour]="'drag'"
-          [connect]="true"
-          (slide)="centerAgeCount()"
-          [formControl]="demoForm.controls.ageRange">
-        </nouislider>
       </div>
-      <input type="number"
-        id="max-age"
-        [min]="minAge" [max]="maxAge"
-        formControlName="ageMax"
-        class="number-display"
-        (blur)="checkMax()">
+      <nouislider
+              [min]="minAge" [max]="maxAge" [step]="1"
+              [behaviour]="'drag'"
+              [connect]="true"
+              (slide)="centerAgeCount()"
+              [formControl]="demoForm.controls.ageRange">
+      </nouislider>
     </div>
+    <input type="number"
+           id="max-age"
+           [min]="minAge" [max]="maxAge"
+           formControlName="ageMax"
+           class="number-display"
+           (blur)="checkMax()">
+    <clr-icon *ngIf= "!ageClicked" class="selection-icon" shape="plus-circle" size = '39' (click)="getAgeValue()"></clr-icon>
+    <clr-icon *ngIf= "ageClicked" class="selection-icon selection-check-icon" shape="check-circle" size = '39'></clr-icon>
   </div>
 
   <!-- Genders -->
-  <div class="form-row">
-    <div class="form-label">
-      <div class="circle-wrapper">
-        <div class="and-circle">AND</div>
+  <div class="demo-container test-container">
+    <div>
+      <div class="demo-title">
+        Gender
       </div>
-      Gender
+      <div class="control-wrapper">
+        <crit-multi-select
+                (addedItems)="getItems($event)"
+                [options]="genderNodes"
+                [getParamId]="selectedParamId"
+                [includeSearchBox]="false"
+                [initialSelection]="initialGenders"
+                [loading]="loading">
+        </crit-multi-select>
+      </div>
     </div>
-    <div class="control-wrapper">
-      <crit-multi-select
-        [options]="genderNodes"
-        [includeSearchBox]="false"
-        [initialSelection]="initialGenders"
-        [loading]="loading">
-      </crit-multi-select>
+
+    <!-- Races -->
+    <div>
+      <div class="demo-title">
+        Race
+      </div>
+      <div class="control-wrapper">
+        <crit-multi-select
+                (addedItems)="getItems($event)"
+                [options]="raceNodes"
+                [getParamId]="selectedParamId"
+                [initialSelection]="initialRaces"
+                [loading]="loading">
+        </crit-multi-select>
+      </div>
+    </div>
+
+    <!-- Ethnicities -->
+    <div>
+      <div class="demo-title">
+        Ethnicity
+      </div>
+      <div class="control-wrapper">
+        <crit-multi-select
+                (addedItems)="getItems($event)"
+                [includeSearchBox]="false"
+                [options]="ethnicityNodes"
+                [getParamId]="selectedParamId"
+                [initialSelection]="initialEthnicities"
+                [loading]="loading">
+        </crit-multi-select>
+      </div>
     </div>
   </div>
-
-  <!-- Races -->
-  <div class="form-row">
-    <div class="form-label">
-      <div class="circle-wrapper">
-        <div class="and-circle">AND</div>
-      </div>
-      Race
-    </div>
-    <div class="control-wrapper">
-      <crit-multi-select
-        [options]="raceNodes"
-        [initialSelection]="initialRaces"
-        [loading]="loading">
-      </crit-multi-select>
-    </div>
-  </div>
-
-  <!-- Ethnicities -->
-  <div class="form-row">
-    <div class="form-label">
-      <div class="circle-wrapper">
-        <div class="and-circle">AND</div>
-      </div>
-      Ethnicity
-    </div>
-    <div class="control-wrapper">
-      <crit-multi-select
-        [options]="ethnicityNodes"
-        [initialSelection]="initialEthnicities"
-        [loading]="loading">
-      </crit-multi-select>
-    </div>
-  </div>
-
-  <!-- Deceased status -->
-  <div class="form-row">
-    <div class="form-label">
-      <div class="circle-wrapper">
-        <div class="and-circle">AND</div>
-      </div>
+  <div>
+    <div class="deceased-title">
       Deceased
     </div>
     <div class="control-wrapper">
-      <div class="checkbox">
-        <input type="checkbox"
-          formControlName="deceased"
-          id="deceased"
-          name="deceased">
-        <label for="deceased">Is Deceased</label>
-      </div>
+      <div (click)="selectedDeasease()" [ngClass]="[ageClicked? 'deceaseNoCursor':'deceaseCursor']">
+        <clr-icon *ngIf= "!deceasedClicked" class="decease-selection-icon" shape="plus-circle" size = '39'  ></clr-icon>
+        <clr-icon *ngIf= "deceasedClicked" class="decease-selection-icon selection-check-icon" shape="check-circle" size = '39'></clr-icon>
+        Is Deceased</div>
     </div>
   </div>
-
-  <div class="form-footer">
-    <button type="button"
-      class="btn btn-link"
-      (click)="cancel.emit(true)">
-      Cancel
-    </button>
-    <button type="submit"
-      class="btn btn-primary"
-      (click)="finish.emit(true)">
-      Finish
-    </button>
-  </div>
 </form>
+<div class="container count-preview" *ngIf="!noSelection">
+  <div class="row">
+    <div class="col-lg-1 " *ngIf="showCalculateContainer || preview.get('requesting')">
+       <span class="spinner spinner-md">
+    </span>
+    </div>
+    <div class="col-lg-2 calculate-button" *ngIf="showCalculateContainer || preview.get('requesting')">
+      Calculating ...
+    </div>
+    <ng-container *ngIf="!preview.get('requesting') && !showCalculateContainer">
+      <div class="col-lg-6 text-padding" *ngIf="preview.get('count') >= 0 || count">
+        <div class="result-text">
+          Results
+        </div>
+        <div>
+          Number Participants:
+          <span class="text-bold" *ngIf="preview.get('count') >= 0;else totalcount">
+       {{ preview.get('count', 0) | number }}
+        </span>
+          <ng-template #totalcount>
+            <span class="text-bold">
+                {{count | number}}
+            </span>
+          </ng-template>
+        </div>
+      </div>
+    </ng-container>
+  </div>
+</div>
+
