[RW-854][Risk=low] Adding recent work scroll component to homepage (#1212)
* some structure

* some structure

* card component

* more stuff

* more changes

* more changes

* more changes

* some tweaks

* some cleaning up

* card actions

* more tweaks

* actions

* some structure

* some structure

* card component

* more stuff

* more changes

* more changes

* more changes

* some tweaks

* some cleaning up

* card actions

* more tweaks

* actions

* merge

* getting scroll right

* couple more tweaks

* ui tests

* de-linting and some other cleanup

* more de-linting

* that is better

* refactoring, PR comments

* forgot newline

* de-linting

* more de-linting

* cannot alphabetize anymore

* seriously, apparently really cannot alphabetize

* forgot to add service to test

* forgot about stub

* for ch

* going for this

* forgot to revert this

* thought I got all of these

* rest of ui tests

* little more refactoring on ui tests

* got overeager with semi-colons

* should have tested again after refactoring

* fixing api tests

* couple of nits

* fixing api tests

* couple of nits

* some more nits

* one more nit? I hope

* fixing nit

* forgot this api test

* got overeager with semicolons

* rename functions

--- a/ui/src/app/views/homepage/component.html
+++ b/ui/src/app/views/homepage/component.html
@@ -77,7 +77,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-3" style="margin-bottom: 2rem;">
+            <div style="margin-bottom: 2rem;">
               <div class="card add-card" (click)="addWorkspace()">
                 <div class="card-text">
                   Create a <br/> New Workspace <br/>
@@ -85,7 +85,9 @@
                 </div>
               </div>
             </div>
-
+              <div style="margin-left: 2.4375rem;">
+                <app-recent-work></app-recent-work>
+              </div>
           </div>
         </div>
       </div>
