RW-269 bydefault route to participants

--- a/ui/src/app/cohort-review/overview-page/overview-page.html
+++ b/ui/src/app/cohort-review/overview-page/overview-page.html
@@ -1,9 +1,10 @@
 <app-review-nav></app-review-nav>
 
 <div>
-  <app-combo-chart
-    *ngIf="data?.size"
-    [mode]="'stacked'"
-    [data]="data">
-  </app-combo-chart>
+  <app-detail-all-events></app-detail-all-events>
+  <!--<app-combo-chart-->
+    <!--*ngIf="data?.size"-->
+    <!--[mode]="'stacked'"-->
+    <!--[data]="data">-->
+  <!--</app-combo-chart>-->
 </div>
