--- a/ui/src/app/cohort-review/review-nav/review-nav.component.html
+++ b/ui/src/app/cohort-review/review-nav/review-nav.component.html
@@ -1,14 +1,14 @@
 <!-- Cohort Review header -->
 <div class="review-header">
-  <a
-    class="header-link"
-    title="Go to Cohort Overview"
-    routerLink="../overview"
-    routerLinkActive="active">
-    Overview
-  </a>
-
-  <div class="vert-bar"></div>
+  <!--<a-->
+    <!--class="header-link"-->
+    <!--title="Go to Cohort Overview"-->
+    <!--routerLink="../overview"-->
+    <!--routerLinkActive="active">-->
+    <!--Overview-->
+  <!--</a>-->
+<!--<app-detail-all-events></app-detail-all-events>-->
+  <!--<div class="vert-bar"></div>-->
 
   <a
     class="header-link"
