--- a/ui/src/app/views/workspace-edit/component.html
+++ b/ui/src/app/views/workspace-edit/component.html
@@ -15,17 +15,24 @@
       <div class="required-text">(Required)</div>
     </div>
     <div class="name-area required-field" [class.validation-error]="nameNotEntered"
-          style="display: inline-block;">
+          style="display: inline-block; vertical-align: middle;">
       <input type="text" class="input name" name="workspace-name" autofocus
              [(ngModel)]="workspace.name" [disabled]="!hasPermission"
              placeholder="Workspace Name">
     </div>
-    <clr-dropdown style="display: inline-block;">
-      <button [disabled]="mode == Mode.Edit"
-          class="btn btn-dropdown cdr-version-dropdown" type="button" clrDropdownTrigger>
-        {{getSelectedCdrName()}}
-        <clr-icon shape="caret down"></clr-icon>
-      </button>
+    <clr-dropdown style="display: inline-block; vertical-align: middle;">
+      <div class="tooltip">
+        <div class="tooltip-content-wrapper">
+          <button [disabled]="mode == Mode.Edit"
+                  class="btn btn-dropdown cdr-version-dropdown" type="button" clrDropdownTrigger>
+            {{selectedCdrName}}
+            <clr-icon shape="caret down"></clr-icon>
+          </button>
+          <div *ngIf="mode == Mode.Edit" class="tooltip-text">
+            To use a different dataset version, clone or create a new workspace.
+          </div>
+        </div>
+      </div>
       <clr-dropdown-menu *clrIfOpen>
         <ng-container *ngFor="let version of cdrVersions">
           <button type="button" clrDropdownItem class="cdr-version-item"
